<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        android:background="@drawable/edittext_white_border" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:background="@drawable/edittext_white_border" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor"
        android:background="@drawable/edittext_white_border" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:padding="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/resendVerificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:layout_marginTop="10dp" />
</LinearLayout>
